funcion base Registrar Movilidad
